@@ -10,10 +10,18 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.telegram:telegrambots:6.1.0'
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
 }
 
+//tasks.withType(JavaCompile).configureEach{
+//    it.options.compilerArgs.add('--enable-preview')
+//    it.options.compilerArgs.add('-Xlint:preview')
+//}
+
 test {
     useJUnitPlatform()
+    jvmArgs(['--enable-preview'])
 }
